--- a/style.css
+++ b/style.css
@@ -565,6 +565,7 @@ img#wpstats {
 .no-sidebar .alignfull {
 	margin-left: calc(50% - 50vw);
 	margin-right: calc(50% - 50vw);
+	max-width: unset;
 }
 
 .no-sidebar-full-width .alignfull img,
